--- a/index.html
+++ b/index.html
@@ -102,7 +102,10 @@
 
   L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png', {
     subdomains: 'abcd',
-    maxZoom: 14
+    maxZoom: 14,
+    keepBuffer: 6,
+    updateWhenZooming: false,
+    updateWhenIdle: true
   }).addTo(map);
 
   L.tileLayer('https://{s}.basemaps.cartocdn.com/light_only_labels/{z}/{x}/{y}{r}.png', {
@@ -127,10 +130,16 @@
     });
 
   let radarFrames = [];
-  let radarLayers = [];
   let currentIndex = 0;
   let playInterval = null;
   const timeBox = document.getElementById("timeBox");
+  let radarLayer = L.tileLayer('', {
+    opacity: 0.8,
+    crossOrigin: true,
+    keepBuffer: 6,
+    updateWhenZooming: false,
+    updateWhenIdle: true
+  }).addTo(map);
 
   function formatDate(timestamp) {
     const date = new Date(timestamp * 1000);
@@ -138,29 +147,19 @@
     return `${days[date.getDay()]} ${String(date.getDate()).padStart(2, '0')}.${String(date.getMonth() + 1).padStart(2, '0')}.${date.getFullYear()} o ${String(date.getHours()).padStart(2, '0')}:${String(date.getMinutes()).padStart(2, '0')}`;
   }
 
-  function fadeToFrame(index) {
-    radarLayers.forEach((layer, i) => {
-      layer.setOpacity(i === index ? 0.8 : 0);
-    });
+  function showFrame(index) {
+    if (!radarFrames[index]) return;
+    radarLayer.setUrl(`https://tilecache.rainviewer.com/v2/radar/${radarFrames[index].path}/256/{z}/{x}/{y}/4/1_1.png`);
     timeBox.textContent = formatDate(radarFrames[index].time);
   }
 
   function loadRadar() {
-    radarLayers.forEach(layer => map.removeLayer(layer));
-    radarLayers = [];
     fetch("https://api.rainviewer.com/public/weather-maps.json")
       .then(r => r.json())
       .then(data => {
         radarFrames = data.radar.past.concat(data.radar.nowcast);
         currentIndex = data.radar.past.length - 1;
-        radarFrames.forEach((frame, i) => {
-          const layer = L.tileLayer(
-            `https://tilecache.rainviewer.com/v2/radar/${frame.path}/256/{z}/{x}/{y}/4/1_1.png`,
-            {opacity: 0, keepBuffer: 4, updateWhenIdle: true}
-          ).addTo(map);
-          radarLayers[i] = layer;
-        });
-        fadeToFrame(currentIndex);
+        showFrame(currentIndex);
       });
   }
 
@@ -168,12 +167,12 @@
 
   document.getElementById("back").onclick = () => {
     currentIndex = (currentIndex - 1 + radarFrames.length) % radarFrames.length;
-    fadeToFrame(currentIndex);
+    showFrame(currentIndex);
   };
 
   document.getElementById("next").onclick = () => {
     currentIndex = (currentIndex + 1) % radarFrames.length;
-    fadeToFrame(currentIndex);
+    showFrame(currentIndex);
   };
 
   document.getElementById("play").onclick = () => {
@@ -184,7 +183,7 @@
     } else {
       playInterval = setInterval(() => {
         currentIndex = (currentIndex + 1) % radarFrames.length;
-        fadeToFrame(currentIndex);
+        showFrame(currentIndex);
       }, 400);
       document.getElementById("playIcon").src = "https://img.icons8.com/ios-filled/50/pause.png";
     }
