--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
       playInterval = setInterval(() => {
         currentIndex = (currentIndex + 1) % radarFrames.length;
         showFrame(currentIndex);
-      }, 400);
+      }, 700); // ✅ pomalšie prehrávanie
       document.getElementById("playIcon").src = "https://img.icons8.com/ios-filled/50/pause.png";
     }
   };
