--- a/index.html
+++ b/index.html
@@ -10,30 +10,41 @@
       width: 100%;
       margin: 0;
       padding: 0;
+      overflow: hidden;
+    }
+    .leaflet-control-zoom,
+    .leaflet-control-attribution {
+      display: none;
     }
     #controls {
       position: fixed;
       bottom: 80px;
       left: 50%;
       transform: translateX(-50%);
-      background: #072C4E;
-      padding: 10px 16px;
+      background: rgba(7,44,78,0.9);
+      padding: 12px 16px;
       border-radius: 25px;
       display: flex;
+      align-items: center;
+      justify-content: center;
       gap: 10px;
       z-index: 9999;
-      box-shadow: 0 0 10px rgba(0,0,0,0.5);
+      box-shadow: 0 0 10px rgba(0,0,0,0.6);
     }
     #controls button {
       background: #0D3F73;
       border: none;
-      width: 45px;
-      height: 45px;
+      width: 50px;
+      height: 50px;
       border-radius: 50%;
       cursor: pointer;
+      transition: background 0.2s;
       display: flex;
       justify-content: center;
       align-items: center;
+    }
+    #controls button:hover {
+      background: #155A9C;
     }
     #controls img {
       width: 22px;
@@ -45,13 +56,14 @@
       bottom: 25px;
       left: 50%;
       transform: translateX(-50%);
-      background: #072C4E;
+      background: rgba(7,44,78,0.9);
       color: white;
-      padding: 6px 14px;
+      padding: 8px 18px;
       border-radius: 12px;
       font-size: 18px;
       font-weight: bold;
       z-index: 9999;
+      box-shadow: 0 0 10px rgba(0,0,0,0.5);
       font-family: Arial, sans-serif;
     }
     #attribution {
@@ -69,6 +81,9 @@
     #attribution a {
       color: #66b3ff;
       text-decoration: none;
+    }
+    #attribution a:hover {
+      text-decoration: underline;
     }
   </style>
 </head>
@@ -95,20 +110,19 @@
   const map = L.map('map', {
     zoomControl: false,
     attributionControl: false,
-    preferCanvas: true,
-    zoomAnimation: true,
-    fadeAnimation: false
+    preferCanvas: false
   });
 
-  L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png', {
+  const baseMap = L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png', {
     subdomains: 'abcd',
     maxZoom: 14,
-    keepBuffer: 6,
+    keepBuffer: 12,
     updateWhenZooming: false,
-    updateWhenIdle: true
+    updateWhenIdle: false,
+    updateInterval: 50
   }).addTo(map);
 
-  L.tileLayer('https://{s}.basemaps.cartocdn.com/light_only_labels/{z}/{x}/{y}{r}.png', {
+  const labels = L.tileLayer('https://{s}.basemaps.cartocdn.com/light_only_labels/{z}/{x}/{y}{r}.png', {
     subdomains: 'abcd',
     maxZoom: 14,
     zIndex: 999
@@ -125,7 +139,8 @@
         style: {color: "#00bfff", weight: 1.5, fillOpacity: 0}
       }).addTo(map);
       if (!savedPos) {
-        map.fitBounds(geo.getBounds().pad(0.25));
+        const padValue = window.innerWidth < 600 ? 0.05 : 0.25;
+        map.fitBounds(geo.getBounds().pad(padValue));
       }
     });
 
@@ -135,10 +150,9 @@
   const timeBox = document.getElementById("timeBox");
   let radarLayer = L.tileLayer('', {
     opacity: 0.8,
-    crossOrigin: true,
-    keepBuffer: 6,
+    keepBuffer: 12,
     updateWhenZooming: false,
-    updateWhenIdle: true
+    updateWhenIdle: false
   }).addTo(map);
 
   function formatDate(timestamp) {
@@ -149,7 +163,8 @@
 
   function showFrame(index) {
     if (!radarFrames[index]) return;
-    radarLayer.setUrl(`https://tilecache.rainviewer.com/v2/radar/${radarFrames[index].path}/256/{z}/{x}/{y}/4/1_1.png`);
+    const url = `https://tilecache.rainviewer.com/v2/radar/${radarFrames[index].path}/256/{z}/{x}/{y}/4/1_1.png`;
+    radarLayer.setUrl(url);
     timeBox.textContent = formatDate(radarFrames[index].time);
   }
 
@@ -184,7 +199,7 @@
       playInterval = setInterval(() => {
         currentIndex = (currentIndex + 1) % radarFrames.length;
         showFrame(currentIndex);
-      }, 700); // ✅ pomalšie prehrávanie
+      }, 800); // ✅ pomalšie prehrávanie
       document.getElementById("playIcon").src = "https://img.icons8.com/ios-filled/50/pause.png";
     }
   };
@@ -193,11 +208,7 @@
 
   map.on("moveend", () => {
     const center = map.getCenter();
-    localStorage.setItem("mapPos", JSON.stringify({
-      lat: center.lat,
-      lng: center.lng,
-      zoom: map.getZoom()
-    }));
+    localStorage.setItem("mapPos", JSON.stringify({lat: center.lat, lng: center.lng, zoom: map.getZoom()}));
   });
 </script>
 </body>
