--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       margin: 0;
       padding: 0;
       overflow: hidden;
+      background: #000;
     }
     .leaflet-control-zoom,
     .leaflet-control-attribution {
@@ -89,7 +90,6 @@
 </head>
 <body>
 <div id="map"></div>
-
 <div id="controls">
   <button id="back"><img src="https://img.icons8.com/ios-filled/50/rewind.png"></button>
   <button id="play"><img id="playIcon" src="https://img.icons8.com/ios-filled/50/play.png"></button>
@@ -97,77 +97,55 @@
   <button id="refresh"><img src="https://img.icons8.com/ios-filled/50/synchronize.png"></button>
 </div>
 <div id="timeBox">Načítavam čas...</div>
-
 <div id="attribution">
   Map data © <a href="https://www.openstreetmap.org/copyright" target="_blank">OpenStreetMap</a> &amp;
   <a href="https://www.rainviewer.com" target="_blank">RainViewer</a>
 </div>
-
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 <script>
   const savedPos = JSON.parse(localStorage.getItem("mapPos")) || null;
-
   const map = L.map('map', {
     zoomControl: false,
     attributionControl: false,
-    preferCanvas: false
+    preferCanvas: false,
+    fadeAnimation: false,
+    zoomAnimation: false
   });
-
-  const baseMap = L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png', {
+  L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png', {
     subdomains: 'abcd',
     maxZoom: 14,
-    keepBuffer: 12,
+    keepBuffer: 8,
+    reuseTiles: true,
     updateWhenZooming: false,
-    updateWhenIdle: false,
-    updateInterval: 50
+    updateWhenIdle: true
   }).addTo(map);
-
-  const labels = L.tileLayer('https://{s}.basemaps.cartocdn.com/light_only_labels/{z}/{x}/{y}{r}.png', {
+  L.tileLayer('https://{s}.basemaps.cartocdn.com/light_only_labels/{z}/{x}/{y}{r}.png', {
     subdomains: 'abcd',
     maxZoom: 14,
+    opacity: 0.8,
     zIndex: 999
   }).addTo(map);
-
   if (savedPos) {
     map.setView([savedPos.lat, savedPos.lng], savedPos.zoom);
+  } else {
+    map.setView([48.7, 19.7], 7);
   }
-
-  fetch("slovakia_Regions_level_1.geojson")
-    .then(r => r.json())
-    .then(data => {
-      const geo = L.geoJSON(data, {
-        style: {color: "#00bfff", weight: 1.5, fillOpacity: 0}
-      }).addTo(map);
-      if (!savedPos) {
-        const padValue = window.innerWidth < 600 ? 0.05 : 0.25;
-        map.fitBounds(geo.getBounds().pad(padValue));
-      }
-    });
-
   let radarFrames = [];
   let currentIndex = 0;
   let playInterval = null;
   const timeBox = document.getElementById("timeBox");
-  let radarLayer = L.tileLayer('', {
-    opacity: 0.8,
-    keepBuffer: 12,
-    updateWhenZooming: false,
-    updateWhenIdle: false
-  }).addTo(map);
-
+  let radarLayer = L.tileLayer('', {opacity: 0.8, reuseTiles: true, keepBuffer: 8}).addTo(map);
   function formatDate(timestamp) {
     const date = new Date(timestamp * 1000);
     const days = ["NE", "PO", "UT", "ST", "ŠT", "PI", "SO"];
     return `${days[date.getDay()]} ${String(date.getDate()).padStart(2, '0')}.${String(date.getMonth() + 1).padStart(2, '0')}.${date.getFullYear()} o ${String(date.getHours()).padStart(2, '0')}:${String(date.getMinutes()).padStart(2, '0')}`;
   }
-
   function showFrame(index) {
     if (!radarFrames[index]) return;
     const url = `https://tilecache.rainviewer.com/v2/radar/${radarFrames[index].path}/256/{z}/{x}/{y}/4/1_1.png`;
     radarLayer.setUrl(url);
     timeBox.textContent = formatDate(radarFrames[index].time);
   }
-
   function loadRadar() {
     fetch("https://api.rainviewer.com/public/weather-maps.json")
       .then(r => r.json())
@@ -177,19 +155,15 @@
         showFrame(currentIndex);
       });
   }
-
   loadRadar();
-
   document.getElementById("back").onclick = () => {
     currentIndex = (currentIndex - 1 + radarFrames.length) % radarFrames.length;
     showFrame(currentIndex);
   };
-
   document.getElementById("next").onclick = () => {
     currentIndex = (currentIndex + 1) % radarFrames.length;
     showFrame(currentIndex);
   };
-
   document.getElementById("play").onclick = () => {
     if (playInterval) {
       clearInterval(playInterval);
@@ -199,13 +173,11 @@
       playInterval = setInterval(() => {
         currentIndex = (currentIndex + 1) % radarFrames.length;
         showFrame(currentIndex);
-      }, 800); // ✅ pomalšie prehrávanie
+      }, 800);
       document.getElementById("playIcon").src = "https://img.icons8.com/ios-filled/50/pause.png";
     }
   };
-
   document.getElementById("refresh").onclick = () => loadRadar();
-
   map.on("moveend", () => {
     const center = map.getCenter();
     localStorage.setItem("mapPos", JSON.stringify({lat: center.lat, lng: center.lng, zoom: map.getZoom()}));
