--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="sk">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Radar zrážok</title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
   <style>
@@ -10,8 +11,6 @@
       width: 100%;
       margin: 0;
       padding: 0;
-      overflow: hidden;
-      background: #000;
     }
     .leaflet-control-zoom,
     .leaflet-control-attribution {
@@ -23,23 +22,21 @@
       left: 50%;
       transform: translateX(-50%);
       background: rgba(7,44,78,0.9);
-      padding: 12px 16px;
+      padding: 10px 16px;
       border-radius: 25px;
       display: flex;
       align-items: center;
-      justify-content: center;
       gap: 10px;
       z-index: 9999;
-      box-shadow: 0 0 10px rgba(0,0,0,0.6);
+      box-shadow: 0 0 10px rgba(0,0,0,0.5);
     }
     #controls button {
       background: #0D3F73;
       border: none;
-      width: 50px;
-      height: 50px;
+      width: 45px;
+      height: 45px;
       border-radius: 50%;
       cursor: pointer;
-      transition: background 0.2s;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -59,8 +56,8 @@
       transform: translateX(-50%);
       background: rgba(7,44,78,0.9);
       color: white;
-      padding: 8px 18px;
-      border-radius: 12px;
+      padding: 8px 20px;
+      border-radius: 15px;
       font-size: 18px;
       font-weight: bold;
       z-index: 9999;
@@ -90,6 +87,7 @@
 </head>
 <body>
 <div id="map"></div>
+
 <div id="controls">
   <button id="back"><img src="https://img.icons8.com/ios-filled/50/rewind.png"></button>
   <button id="play"><img id="playIcon" src="https://img.icons8.com/ios-filled/50/play.png"></button>
@@ -97,57 +95,56 @@
   <button id="refresh"><img src="https://img.icons8.com/ios-filled/50/synchronize.png"></button>
 </div>
 <div id="timeBox">Načítavam čas...</div>
+
 <div id="attribution">
   Map data © <a href="https://www.openstreetmap.org/copyright" target="_blank">OpenStreetMap</a> &amp;
   <a href="https://www.rainviewer.com" target="_blank">RainViewer</a>
 </div>
+
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 <script>
-  const savedPos = JSON.parse(localStorage.getItem("mapPos")) || null;
-  const map = L.map('map', {
-    zoomControl: false,
-    attributionControl: false,
-    preferCanvas: false,
-    fadeAnimation: false,
-    zoomAnimation: true
-  });
+  const savedPos = JSON.parse(localStorage.getItem("mapPos"));
+
+  const map = L.map('map', {zoomControl: false, attributionControl: false});
+
   L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png', {
-    subdomains: 'abcd',
-    maxZoom: 14,
-    keepBuffer: 12,
-    reuseTiles: true,
-    updateWhenZooming: false,
-    updateWhenIdle: false
+    subdomains: 'abcd'
   }).addTo(map);
+
   L.tileLayer('https://{s}.basemaps.cartocdn.com/light_only_labels/{z}/{x}/{y}{r}.png', {
     subdomains: 'abcd',
-    maxZoom: 14,
-    opacity: 0.8,
-    zIndex: 999,
-    keepBuffer: 12,
-    reuseTiles: true
+    zIndex: 999
   }).addTo(map);
+
   if (savedPos) {
     map.setView([savedPos.lat, savedPos.lng], savedPos.zoom);
   } else {
-    map.setView([48.7, 19.7], 7);
+    fetch("slovakia_Regions_level_1.geojson")
+      .then(r => r.json())
+      .then(data => {
+        const geo = L.geoJSON(data, {style: {color: "#00bfff", weight: 1.5, fillOpacity: 0}}).addTo(map);
+        map.fitBounds(geo.getBounds().pad(window.innerWidth < 600 ? 0.05 : 0.25));
+      });
   }
+
   let radarFrames = [];
   let currentIndex = 0;
   let playInterval = null;
   const timeBox = document.getElementById("timeBox");
-  let radarLayer = L.tileLayer('', {opacity: 0.8, reuseTiles: true, keepBuffer: 12}).addTo(map);
+  let radarLayer = L.tileLayer('', {opacity: 0.8}).addTo(map);
+
   function formatDate(timestamp) {
-    const date = new Date(timestamp * 1000);
+    const d = new Date(timestamp * 1000);
     const days = ["NE", "PO", "UT", "ST", "ŠT", "PI", "SO"];
-    return `${days[date.getDay()]} ${String(date.getDate()).padStart(2, '0')}.${String(date.getMonth() + 1).padStart(2, '0')}.${date.getFullYear()} o ${String(date.getHours()).padStart(2, '0')}:${String(date.getMinutes()).padStart(2, '0')}`;
+    return `${days[d.getDay()]} ${String(d.getDate()).padStart(2, '0')}.${String(d.getMonth() + 1).padStart(2, '0')}.${d.getFullYear()} o ${String(d.getHours()).padStart(2, '0')}:${String(d.getMinutes()).padStart(2, '0')}`;
   }
-  function showFrame(index) {
-    if (!radarFrames[index]) return;
-    const url = `https://tilecache.rainviewer.com/v2/radar/${radarFrames[index].path}/256/{z}/{x}/{y}/4/1_1.png`;
-    radarLayer.setUrl(url);
-    timeBox.textContent = formatDate(radarFrames[index].time);
+
+  function showFrame(i) {
+    if (!radarFrames[i]) return;
+    radarLayer.setUrl(`https://tilecache.rainviewer.com/v2/radar/${radarFrames[i].path}/256/{z}/{x}/{y}/4/1_1.png`);
+    timeBox.textContent = formatDate(radarFrames[i].time);
   }
+
   function loadRadar() {
     fetch("https://api.rainviewer.com/public/weather-maps.json")
       .then(r => r.json())
@@ -157,15 +154,19 @@
         showFrame(currentIndex);
       });
   }
+
   loadRadar();
+
   document.getElementById("back").onclick = () => {
     currentIndex = (currentIndex - 1 + radarFrames.length) % radarFrames.length;
     showFrame(currentIndex);
   };
+
   document.getElementById("next").onclick = () => {
     currentIndex = (currentIndex + 1) % radarFrames.length;
     showFrame(currentIndex);
   };
+
   document.getElementById("play").onclick = () => {
     if (playInterval) {
       clearInterval(playInterval);
@@ -175,11 +176,13 @@
       playInterval = setInterval(() => {
         currentIndex = (currentIndex + 1) % radarFrames.length;
         showFrame(currentIndex);
-      }, 1200);
+      }, 900);
       document.getElementById("playIcon").src = "https://img.icons8.com/ios-filled/50/pause.png";
     }
   };
+
   document.getElementById("refresh").onclick = () => loadRadar();
+
   map.on("moveend", () => {
     const center = map.getCenter();
     localStorage.setItem("mapPos", JSON.stringify({lat: center.lat, lng: center.lng, zoom: map.getZoom()}));
