--- a/index.html
+++ b/index.html
@@ -138,7 +138,10 @@
 
   L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png', {
     subdomains: 'abcd',
-    maxZoom: 18
+    maxZoom: 18,
+    keepBuffer: 8,
+    updateWhenZooming: false,
+    updateWhenIdle: true
   }).addTo(map);
 
   L.tileLayer('https://{s}.basemaps.cartocdn.com/light_only_labels/{z}/{x}/{y}{r}.png', {
@@ -158,7 +161,12 @@
   let currentIndex = 0;
   let playInterval = null;
   const timeBox = document.getElementById("timeBox");
-  let radarLayer = L.tileLayer('', {opacity: 0.8}).addTo(map);
+  let radarLayer = L.tileLayer('', {
+    opacity: 0.8,
+    keepBuffer: 8,
+    updateWhenZooming: false,
+    updateWhenIdle: true
+  }).addTo(map);
 
   function formatDate(timestamp) {
     const date = new Date(timestamp * 1000);
@@ -204,7 +212,7 @@
       playInterval = setInterval(() => {
         currentIndex = (currentIndex + 1) % radarFrames.length;
         showFrame(currentIndex);
-      }, 900);
+      }, 1000);
       document.getElementById("playIcon").src = "https://img.icons8.com/ios-filled/50/pause.png";
     }
   };
