--- a/index.html
+++ b/index.html
@@ -157,6 +157,17 @@
     map.setView([48.7, 19.7], 7);
   }
 
+  fetch("slovakia_Regions_level_1.geojson")
+    .then(r => r.json())
+    .then(data => {
+      const geo = L.geoJSON(data, {
+        style: {color: "#00bfff", weight: 1.5, fillOpacity: 0}
+      }).addTo(map);
+      if (!savedPos) {
+        map.fitBounds(geo.getBounds().pad(0.25));
+      }
+    });
+
   let radarFrames = [];
   let currentIndex = 0;
   let playInterval = null;
