--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="sk">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Radar zrážok</title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
   <style>
@@ -11,8 +11,7 @@
       width: 100%;
       margin: 0;
       padding: 0;
-      overflow: hidden;
-      background: black;
+      background: #000;
     }
     .leaflet-control-zoom,
     .leaflet-control-attribution {
@@ -87,30 +86,10 @@
     #attribution a:hover {
       text-decoration: underline;
     }
-    @media (max-width: 600px) {
-      #controls {
-        bottom: 65px;
-        padding: 10px 14px;
-        gap: 8px;
-      }
-      #controls button {
-        width: 44px;
-        height: 44px;
-      }
-      #controls img {
-        width: 20px;
-        height: 20px;
-      }
-      #timeBox {
-        font-size: 16px;
-        padding: 6px 14px;
-      }
-    }
   </style>
 </head>
 <body>
 <div id="map"></div>
-
 <div id="controls">
   <button id="back"><img src="https://img.icons8.com/ios-filled/50/rewind.png"></button>
   <button id="play"><img id="playIcon" src="https://img.icons8.com/ios-filled/50/play.png"></button>
@@ -118,44 +97,36 @@
   <button id="refresh"><img src="https://img.icons8.com/ios-filled/50/synchronize.png"></button>
 </div>
 <div id="timeBox">Načítavam čas...</div>
-
 <div id="attribution">
   Map data © <a href="https://www.openstreetmap.org/copyright" target="_blank">OpenStreetMap</a> &amp;
   <a href="https://www.rainviewer.com" target="_blank">RainViewer</a>
 </div>
-
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 <script>
-  const savedPos = JSON.parse(localStorage.getItem("mapPos")) || null;
   const map = L.map('map', {
     zoomControl: false,
     attributionControl: false,
-    inertia: true,
-    inertiaDeceleration: 3000,
-    zoomAnimation: true,
-    fadeAnimation: false
+    preferCanvas: true,
+    minZoom: 5,
+    maxZoom: 14
   });
 
   L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png', {
     subdomains: 'abcd',
-    maxZoom: 18,
-    keepBuffer: 10,
+    maxZoom: 14,
+    keepBuffer: 12,
+    unloadInvisibleTiles: false,
     updateWhenZooming: false,
     updateWhenIdle: true
   }).addTo(map);
 
   L.tileLayer('https://{s}.basemaps.cartocdn.com/light_only_labels/{z}/{x}/{y}{r}.png', {
     subdomains: 'abcd',
-    maxZoom: 18,
+    maxZoom: 14,
     opacity: 0.9,
-    zIndex: 999
+    keepBuffer: 12,
+    unloadInvisibleTiles: false
   }).addTo(map);
-
-  if (savedPos) {
-    map.setView([savedPos.lat, savedPos.lng], savedPos.zoom);
-  } else {
-    map.setView([48.7, 19.7], 7);
-  }
 
   fetch("slovakia_Regions_level_1.geojson")
     .then(r => r.json())
@@ -163,21 +134,14 @@
       const geo = L.geoJSON(data, {
         style: {color: "#00bfff", weight: 1.5, fillOpacity: 0}
       }).addTo(map);
-      if (!savedPos) {
-        map.fitBounds(geo.getBounds().pad(0.25));
-      }
+      map.fitBounds(geo.getBounds().pad(0.25));
     });
 
   let radarFrames = [];
+  let radarLayers = [];
   let currentIndex = 0;
   let playInterval = null;
   const timeBox = document.getElementById("timeBox");
-  let radarLayer = L.tileLayer('', {
-    opacity: 0.8,
-    keepBuffer: 10,
-    updateWhenZooming: false,
-    updateWhenIdle: true
-  }).addTo(map);
 
   function formatDate(timestamp) {
     const date = new Date(timestamp * 1000);
@@ -186,18 +150,34 @@
   }
 
   function showFrame(index) {
-    if (!radarFrames[index]) return;
-    const url = `https://tilecache.rainviewer.com/v2/radar/${radarFrames[index].path}/256/{z}/{x}/{y}/4/1_1.png`;
-    radarLayer.setUrl(url);
+    radarLayers.forEach((layer, i) => {
+      layer.setOpacity(i === index ? 0.8 : 0);
+    });
     timeBox.textContent = formatDate(radarFrames[index].time);
   }
 
   function loadRadar() {
+    radarLayers.forEach(layer => map.removeLayer(layer));
+    radarLayers = [];
     fetch("https://api.rainviewer.com/public/weather-maps.json")
       .then(r => r.json())
       .then(data => {
         radarFrames = data.radar.past.concat(data.radar.nowcast);
         currentIndex = data.radar.past.length - 1;
+        radarFrames.forEach((frame, i) => {
+          const layer = L.tileLayer(
+            `https://tilecache.rainviewer.com/v2/radar/${frame.path}/256/{z}/{x}/{y}/4/1_1.png`,
+            {
+              opacity: 0,
+              crossOrigin: true,
+              keepBuffer: 12,
+              unloadInvisibleTiles: false,
+              updateWhenZooming: false,
+              updateWhenIdle: true
+            }
+          ).addTo(map);
+          radarLayers.push(layer);
+        });
         showFrame(currentIndex);
       });
   }
@@ -229,11 +209,6 @@
   };
 
   document.getElementById("refresh").onclick = () => loadRadar();
-
-  map.on("moveend", () => {
-    const center = map.getCenter();
-    localStorage.setItem("mapPos", JSON.stringify({lat: center.lat, lng: center.lng, zoom: map.getZoom()}));
-  });
 </script>
 </body>
 </html>
