--- a/index.html
+++ b/index.html
@@ -103,118 +103,132 @@
 </div>
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 <script>
+  const savedPos = JSON.parse(localStorage.getItem("mapPos")) || null
+
   const map = L.map('map', {
     zoomControl: false,
     attributionControl: false,
     preferCanvas: true,
-    minZoom: 5,
-    maxZoom: 14,
     zoomAnimation: true,
     zoomAnimationThreshold: 12,
+    zoomSnap: 0,
     inertia: true
-  });
+  })
 
   L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png', {
     subdomains: 'abcd',
     maxZoom: 14,
-    keepBuffer: 16,
+    keepBuffer: 24,
     unloadInvisibleTiles: false,
     updateWhenZooming: true,
     updateWhenIdle: false,
     updateWhenDragging: true
-  }).addTo(map);
+  }).addTo(map)
 
   L.tileLayer('https://{s}.basemaps.cartocdn.com/light_only_labels/{z}/{x}/{y}{r}.png', {
     subdomains: 'abcd',
     maxZoom: 14,
     opacity: 0.9,
-    keepBuffer: 16,
+    keepBuffer: 24,
     unloadInvisibleTiles: false,
-    updateWhenDragging: true
-  }).addTo(map);
+    updateWhenDragging: true,
+    updateWhenZooming: true,
+    updateWhenIdle: false
+  }).addTo(map)
+
+  if (savedPos) {
+    map.setView([savedPos.lat, savedPos.lng], savedPos.zoom)
+  }
 
   fetch("slovakia_Regions_level_1.geojson")
     .then(r => r.json())
     .then(data => {
       const geo = L.geoJSON(data, {
         style: {color: "#00bfff", weight: 1.5, fillOpacity: 0}
-      }).addTo(map);
-      map.fitBounds(geo.getBounds().pad(0.25));
-    });
+      }).addTo(map)
+      if (!savedPos) {
+        map.fitBounds(geo.getBounds().pad(0.25))
+      }
+    })
 
-  let radarFrames = [];
-  let radarLayers = [];
-  let currentIndex = 0;
-  let playInterval = null;
-  const timeBox = document.getElementById("timeBox");
+  let radarFrames = []
+  let radarLayers = []
+  let currentIndex = 0
+  let playInterval = null
+  const timeBox = document.getElementById("timeBox")
 
   function formatDate(timestamp) {
-    const date = new Date(timestamp * 1000);
-    const days = ["NE", "PO", "UT", "ST", "ŠT", "PI", "SO"];
-    return `${days[date.getDay()]} ${String(date.getDate()).padStart(2, '0')}.${String(date.getMonth() + 1).padStart(2, '0')}.${date.getFullYear()} o ${String(date.getHours()).padStart(2, '0')}:${String(date.getMinutes()).padStart(2, '0')}`;
+    const date = new Date(timestamp * 1000)
+    const days = ["NE", "PO", "UT", "ST", "ŠT", "PI", "SO"]
+    return `${days[date.getDay()]} ${String(date.getDate()).padStart(2, '0')}.${String(date.getMonth() + 1).padStart(2, '0')}.${date.getFullYear()} o ${String(date.getHours()).padStart(2, '0')}:${String(date.getMinutes()).padStart(2, '0')}`
   }
 
   function showFrame(index) {
     radarLayers.forEach((layer, i) => {
-      layer.setOpacity(i === index ? 0.8 : 0);
-    });
-    timeBox.textContent = formatDate(radarFrames[index].time);
+      layer.setOpacity(i === index ? 0.8 : 0)
+    })
+    timeBox.textContent = formatDate(radarFrames[index].time)
   }
 
   function loadRadar() {
-    radarLayers.forEach(layer => map.removeLayer(layer));
-    radarLayers = [];
+    radarLayers.forEach(layer => map.removeLayer(layer))
+    radarLayers = []
     fetch("https://api.rainviewer.com/public/weather-maps.json")
       .then(r => r.json())
       .then(data => {
-        radarFrames = data.radar.past.concat(data.radar.nowcast);
-        currentIndex = data.radar.past.length - 1;
+        radarFrames = data.radar.past.concat(data.radar.nowcast)
+        currentIndex = data.radar.past.length - 1
         radarFrames.forEach((frame, i) => {
           const layer = L.tileLayer(
             `https://tilecache.rainviewer.com/v2/radar/${frame.path}/256/{z}/{x}/{y}/4/1_1.png`,
             {
               opacity: 0,
               crossOrigin: true,
-              keepBuffer: 16,
+              keepBuffer: 24,
               unloadInvisibleTiles: false,
               updateWhenDragging: true,
               updateWhenZooming: true,
               updateWhenIdle: false
             }
-          ).addTo(map);
-          radarLayers.push(layer);
-        });
-        showFrame(currentIndex);
-      });
+          ).addTo(map)
+          radarLayers.push(layer)
+        })
+        showFrame(currentIndex)
+      })
   }
 
-  loadRadar();
+  loadRadar()
 
   document.getElementById("back").onclick = () => {
-    currentIndex = (currentIndex - 1 + radarFrames.length) % radarFrames.length;
-    showFrame(currentIndex);
-  };
+    currentIndex = (currentIndex - 1 + radarFrames.length) % radarFrames.length
+    showFrame(currentIndex)
+  }
 
   document.getElementById("next").onclick = () => {
-    currentIndex = (currentIndex + 1) % radarFrames.length;
-    showFrame(currentIndex);
-  };
+    currentIndex = (currentIndex + 1) % radarFrames.length
+    showFrame(currentIndex)
+  }
 
   document.getElementById("play").onclick = () => {
     if (playInterval) {
-      clearInterval(playInterval);
-      playInterval = null;
-      document.getElementById("playIcon").src = "https://img.icons8.com/ios-filled/50/play.png";
+      clearInterval(playInterval)
+      playInterval = null
+      document.getElementById("playIcon").src = "https://img.icons8.com/ios-filled/50/play.png"
     } else {
       playInterval = setInterval(() => {
-        currentIndex = (currentIndex + 1) % radarFrames.length;
-        showFrame(currentIndex);
-      }, 1200);
-      document.getElementById("playIcon").src = "https://img.icons8.com/ios-filled/50/pause.png";
+        currentIndex = (currentIndex + 1) % radarFrames.length
+        showFrame(currentIndex)
+      }, 1500)
+      document.getElementById("playIcon").src = "https://img.icons8.com/ios-filled/50/pause.png"
     }
-  };
+  }
 
-  document.getElementById("refresh").onclick = () => loadRadar();
+  document.getElementById("refresh").onclick = () => loadRadar()
+
+  map.on("moveend", () => {
+    const center = map.getCenter()
+    localStorage.setItem("mapPos", JSON.stringify({lat: center.lat, lng: center.lng, zoom: map.getZoom()}))
+  })
 </script>
 </body>
 </html>
