--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     }
     #controls {
       position: fixed;
-      bottom: 80px;
+      bottom: 95px;
       left: 50%;
       transform: translateX(-50%);
       background: rgba(7,44,78,0.9);
@@ -54,13 +54,13 @@
     }
     #timeBox {
       position: fixed;
-      bottom: 25px;
+      bottom: 30px;
       left: 50%;
       transform: translateX(-50%);
       background: rgba(7,44,78,0.9);
       color: white;
-      padding: 8px 18px;
-      border-radius: 12px;
+      padding: 8px 20px;
+      border-radius: 15px;
       font-size: 18px;
       font-weight: bold;
       z-index: 9999;
@@ -101,7 +101,6 @@
         height: 20px;
       }
       #timeBox {
-        bottom: 60px;
         font-size: 16px;
         padding: 6px 14px;
       }
@@ -127,7 +126,6 @@
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 <script>
   const savedPos = JSON.parse(localStorage.getItem("mapPos")) || null;
-
   const map = L.map('map', {
     zoomControl: false,
     attributionControl: false
@@ -135,7 +133,8 @@
 
   L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png', {
     subdomains: 'abcd',
-    maxZoom: 14
+    maxZoom: 14,
+    keepBuffer: 6
   }).addTo(map);
 
   L.tileLayer('https://{s}.basemaps.cartocdn.com/light_only_labels/{z}/{x}/{y}{r}.png', {
@@ -146,15 +145,25 @@
 
   if (savedPos) {
     map.setView([savedPos.lat, savedPos.lng], savedPos.zoom);
-  } else {
-    map.setView([48.7, 19.7], 7);
   }
 
+  fetch("slovakia_Regions_level_1.geojson")
+    .then(r => r.json())
+    .then(data => {
+      const geo = L.geoJSON(data, {
+        style: {color: "#00bfff", weight: 1.5, fillOpacity: 0}
+      }).addTo(map);
+      if (!savedPos) {
+        const padValue = window.innerWidth < 600 ? 0.05 : 0.25;
+        map.fitBounds(geo.getBounds().pad(padValue));
+      }
+    });
+
   let radarFrames = [];
+  let radarLayers = [];
   let currentIndex = 0;
   let playInterval = null;
   const timeBox = document.getElementById("timeBox");
-  let radarLayer = L.tileLayer('', {opacity: 0.8}).addTo(map);
 
   function formatDate(timestamp) {
     const date = new Date(timestamp * 1000);
@@ -162,20 +171,29 @@
     return `${days[date.getDay()]} ${String(date.getDate()).padStart(2, '0')}.${String(date.getMonth() + 1).padStart(2, '0')}.${date.getFullYear()} o ${String(date.getHours()).padStart(2, '0')}:${String(date.getMinutes()).padStart(2, '0')}`;
   }
 
-  function showFrame(index) {
-    if (!radarFrames[index]) return;
-    const url = `https://tilecache.rainviewer.com/v2/radar/${radarFrames[index].path}/256/{z}/{x}/{y}/4/1_1.png`;
-    radarLayer.setUrl(url);
+  function fadeToFrame(index) {
+    radarLayers.forEach((layer, i) => {
+      layer.setOpacity(i === index ? 0.8 : 0);
+    });
     timeBox.textContent = formatDate(radarFrames[index].time);
   }
 
   function loadRadar() {
+    radarLayers.forEach(layer => map.removeLayer(layer));
+    radarLayers = [];
     fetch("https://api.rainviewer.com/public/weather-maps.json")
       .then(r => r.json())
       .then(data => {
         radarFrames = data.radar.past.concat(data.radar.nowcast);
         currentIndex = data.radar.past.length - 1;
-        showFrame(currentIndex);
+        radarFrames.forEach((frame, i) => {
+          const layer = L.tileLayer(
+            `https://tilecache.rainviewer.com/v2/radar/${frame.path}/256/{z}/{x}/{y}/4/1_1.png`,
+            {opacity: 0, crossOrigin: true}
+          ).addTo(map);
+          radarLayers[i] = layer;
+        });
+        fadeToFrame(currentIndex);
       });
   }
 
@@ -183,12 +201,12 @@
 
   document.getElementById("back").onclick = () => {
     currentIndex = (currentIndex - 1 + radarFrames.length) % radarFrames.length;
-    showFrame(currentIndex);
+    fadeToFrame(currentIndex);
   };
 
   document.getElementById("next").onclick = () => {
     currentIndex = (currentIndex + 1) % radarFrames.length;
-    showFrame(currentIndex);
+    fadeToFrame(currentIndex);
   };
 
   document.getElementById("play").onclick = () => {
@@ -199,8 +217,8 @@
     } else {
       playInterval = setInterval(() => {
         currentIndex = (currentIndex + 1) % radarFrames.length;
-        showFrame(currentIndex);
-      }, 800);
+        fadeToFrame(currentIndex);
+      }, 700);
       document.getElementById("playIcon").src = "https://img.icons8.com/ios-filled/50/pause.png";
     }
   };
