--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="sk">
 <head>
   <meta charset="UTF-8">
-  <title>Radar zrážok – Slovensko (orezané)</title>
+  <title>Radar zrážok – Slovensko</title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
   <style>
     html, body, #map {
@@ -106,25 +106,35 @@
   const map = L.map('map', {
     zoomControl: false,
     attributionControl: false,
+    // ✅ Slovensko + malý buffer ~30 km
     maxBounds: [
-      [47.0, 16.0],
-      [49.7, 22.6]
+      [47.05, 16.8],  // juhozápad (Rakúsko - Maďarsko)
+      [49.65, 22.55]  // severovýchod (Poľsko - Ukrajina)
     ],
     maxBoundsViscosity: 1.0
-  });
+  }).setView([48.7, 19.7], 7); // ✅ fix stred
 
   L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png', {
     subdomains: 'abcd',
-    maxZoom: 10
+    maxZoom: 10,
+    minZoom: 6
   }).addTo(map);
+
+  // ✅ Hranice Slovenska
+  fetch("slovakia_Regions_level_1.geojson")
+    .then(r => r.json())
+    .then(data => {
+      const geo = L.geoJSON(data, {
+        style: {color: "#00bfff", weight: 1.5, fillOpacity: 0}
+      }).addTo(map);
+      map.fitBounds(geo.getBounds().pad(0.02)); // malý buffer
+    });
 
   let radarFrames = [];
   let radarLayers = [];
   let currentIndex = 0;
   let playInterval = null;
   const timeBox = document.getElementById("timeBox");
-
-  let slovakiaMask; // sem uložíme GeoJSON masku
 
   function formatDate(timestamp) {
     const date = new Date(timestamp * 1000);
@@ -152,18 +162,14 @@
         radarFrames.forEach((frame, i) => {
           const layer = L.tileLayer(
             `https://tilecache.rainviewer.com/v2/radar/${frame.path}/256/{z}/{x}/{y}/4/1_1.png`,
-            {opacity: 0}
-          );
-          // ✅ pridáme maskovanie len na Slovensko
-          layer.on('tileload', function(e) {
-            const ctx = e.tile.getContext('2d');
-            if (slovakiaMask) {
-              ctx.globalCompositeOperation = 'destination-in';
-              ctx.drawImage(slovakiaMask, 0, 0, 256, 256);
-              ctx.globalCompositeOperation = 'source-over';
+            {
+              opacity: 0,
+              bounds: [
+                [47.05, 16.8],
+                [49.65, 22.55]
+              ]
             }
-          });
-          layer.addTo(map);
+          ).addTo(map);
           radarLayers[i] = layer;
         });
 
@@ -171,19 +177,8 @@
       });
   }
 
-  // ✅ načítanie masky (GeoJSON)
-  fetch("slovakia_Regions_level_1.geojson")
-    .then(r => r.json())
-    .then(data => {
-      L.geoJSON(data, {
-        style: {color: "#00bfff", weight: 1.5, fillOpacity: 0}
-      }).addTo(map);
-      map.fitBounds(L.geoJSON(data).getBounds().pad(0.05));
-    });
-
   loadRadar();
 
-  // ✅ Ovládanie
   document.getElementById("back").onclick = () => {
     currentIndex = (currentIndex - 1 + radarFrames.length) % radarFrames.length;
     fadeToFrame(currentIndex);
